--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ a{
 
 /* Style for dishes pages */
 .mainDish-container{
-    /* height: 100%; */
+    min-height: 100%;
     background-color: rgb(161, 243, 161);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding: 10px;
